added GET workflow info endpoint
